--- a/css/styles.scss
+++ b/css/styles.scss
@@ -68,8 +68,11 @@ a {
 
     &:hover {
         cursor: pointer;
-        background-color: $secondary-color;
         color: $primary-color;
+
+        &:not(.logo-link) {
+            background-color: $secondary-color;
+        }
     }
 }
 
@@ -106,6 +109,12 @@ img {
         align-items: center;
         padding-left: 1vw; // Match container padding
         padding-right: 1vw; // Match container padding
+
+        @media screen and (max-width: 900px) {
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr 1fr;
+            padding-top: 1vh;
+        }
     }
 
     &__inside__logo,
@@ -118,21 +127,41 @@ img {
     &__inside__logo {
         justify-content: start;
 
+        @media screen and (max-width: 900px) {
+            grid-row: 1/2;
+            grid-column: 1/2;
+        }
+
         img {
             width: 2vw;
+
+            @media screen and (max-width: 900px) {
+                width: 10vw;
+            }
         }
     }
 
     &__inside__name {
         justify-content: start;
+
+        @media screen and (max-width: 900px) {
+            grid-column: 1/3;
+        }
     }
 
     &__inside__links {
         justify-content: end;
 
+        @media screen and (max-width: 900px) {
+            grid-row: 1/2;
+            grid-column: 2/3;
+            width: 100%;
+            justify-content: end;
+        }
+
         ul {
             display: flex;
-            gap: 1rem; // Adjust spacing between links
+            gap: 1rem;
             list-style: none;
         }
 
@@ -155,24 +184,44 @@ img {
         grid-template-rows: 1fr 1fr;
         grid-gap: 1rem;
 
+        @media screen and (max-width: 900px) {
+            grid-template-columns: 1fr;
+            grid-template-rows: auto;
+        }
+
         &__elem {
             display: flex;
             justify-content: start;
             align-items: center;
-            font-size: 2rem;
             height: 30vh;
+
+            @media screen and (max-width: 900px) {
+                flex-wrap: wrap;
+                height: 100%;
+                padding-top: 5vh;
+            }
 
             img {
                 height: 100%;
                 width: auto;
                 object-fit: contain;
+
+                @media screen and (max-width: 900px) {
+                    width: 100%;
+                    height: auto;
+                }
             }
 
             div {
                 width: 50%;
                 padding-left: 2vw;
-                font-size: 1.5rem;
+                font-size: 1rem;
                 height: 100%;
+
+                @media screen and (max-width: 900px) {
+                    width: 100%;
+                    padding-top: 1rem;
+                }
             }
         }
     }
@@ -184,7 +233,7 @@ img {
     height: calc(100vh - 20vh);
     padding-left: 1vw;
     padding-right: 1vw;
-    padding-top: 15vh;
+    padding-top: 10vh;
 
     &__grid {
         height: 100%;
@@ -192,18 +241,32 @@ img {
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 1rem;
         align-items: center;
-        padding-left: 1vw;
-        padding-right: 1vw;
+
+        @media screen and (max-width: 900px) {
+            grid-template-columns: 1fr;
+        }
 
         &__content {
             display: flex;
             justify-content: start;
             align-items: center;
-            height: 100%;
+            height: 30vh;
+
+            @media screen and (max-width: 900px) {
+                flex-wrap: wrap;
+                height: 100%;
+                padding-top: 5vh;
+                height: 100vh;
+            }
 
             iframe {
                 width: 700px;
                 height: 900px;
+
+                @media screen and (max-width: 900px) {
+                    width: 100%;
+                    height: 70vh;
+                }
             }
         }
     }
