--- a/css/styles.scss
+++ b/css/styles.scss
@@ -205,6 +205,7 @@ img {
                 height: 100%;
                 width: auto;
                 object-fit: contain;
+                border: 1px solid $secondary-color;
 
                 @media screen and (max-width: 900px) {
                     width: 100%;
